# mcpkit-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mcpkit-rs/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/mcpkit-rs-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/mcpkit-rs-macros/src/: lib.rs  prompt.rs  prompt_handler.rs  prompt_router.rs  task_handler.rs  tool.rs  tool_handler.rs  tool_router.rs
crates/mcpkit-rs-tests/: Cargo.toml
crates/mcpkit-rs/src/: error.rs  lib.rs  model.rs  task_manager.rs  transport.rs
crates/mcpkit-rs/tests/: test_client_credentials.rs  test_client_initialization.rs  test_close_connection.rs  test_completion.rs  test_complex_schema.rs  test_custom_headers.rs  test_custom_request.rs  test_deserialization.rs  test_elicitation.rs  test_embedded_resource_meta.rs  test_handler_wrappers.rs  test_json_schema_detection.rs  test_logging.rs  test_message_protocol.rs  test_message_schema.rs  test_notification.rs  test_policy_enforcement.rs  test_progress_subscriber.rs  test_prompt_handler.rs  test_prompt_macro_annotations.rs  test_prompt_macros.rs  test_prompt_routers.rs  test_resource_link.rs  test_resource_link_integration.rs  test_sampling.rs  test_sse_concurrent_streams.rs  test_streamable_http_json_response.rs  test_streamable_http_priming.rs  test_streamable_http_stale_session.rs  test_structured_output.rs  test_task.rs  test_task_support_validation.rs  test_tool_builder_methods.rs  test_tool_macro_annotations.rs  test_tool_macros.rs  test_tool_result_meta.rs  test_tool_routers.rs  test_with_js.rs  test_with_python.rs
crates/rmcp/: CHANGELOG.md  Cargo.toml
crates/rmcp-macros/: CHANGELOG.md
crates/rmcp-macros/src/: task_handler.rs  tool.rs  tool_handler.rs  tool_router.rs
crates/rmcp/src/: error.rs  lib.rs  service.rs  task_manager.rs  transport.rs
crates/rmcp/tests/: test_completion.rs  (+23 more)
examples/: README.md
examples/clients/: Cargo.toml
examples/rig-integration/: Cargo.toml
examples/servers/: Cargo.toml
examples/simple-chat-client/: Cargo.toml
examples/transport/: Cargo.toml
examples/wasi/: test_wasi_protocol.jsonl
examples/wasm/: README.md
examples/wasm-calculator/: Cargo.toml  README.md  test_mcp.txt  test_wasi_full.jsonl
examples/wasm-fullstack/: Cargo.toml  README.md  build-v2.sh  test_v1.txt
(+114 files in other folders)
