[package]
name = "wasm-fullstack"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "v1"
path = "src/bin/v1.rs"

[[bin]]
name = "v2"
path = "src/bin/v2.rs"

[[bin]]
name = "v2-wasmedge"
path = "src/bin/v2_wasmedge.rs"

[[bin]]
name = "db-proxy"
path = "src/bin/db-proxy.rs"

[features]
default = []
v2 = []

[dependencies]
anyhow = "1.0"
chrono = "0.4"
glob = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rmcp = { path = "../../crates/rmcp", features = ["schemars"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "macros", "io-util", "time", "sync", "net", "fs"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasi = "0.14.2"

# Dependencies for db-proxy (native only, not WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors"] }

# Patches for WasmEdge compatibility
[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
tokio-postgres = { git = "https://github.com/second-state/rust-postgres.git" }
