[package]
name = "wasm-fullstack"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "v1"
path = "src/bin/v1.rs"

[[bin]]
name = "v2"
path = "src/bin/v2.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
glob = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rmcp = { path = "../../crates/rmcp", features = ["schemars"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt", "macros", "io-util", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasi = "0.14.2"
